# minions

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  periodic_tasks.md  pyproject.toml  requirements.txt  todo  todo.md
.github/: copilot-instructions.md
docs/: Makefile  conf.py  getting-started.md  index.md  index_new.md
docs/_static/: custom.css
docs/_templates/: navbar-logo.html
docs/advanced/: minimal-installs.md  sidecar-resources.md
docs/concepts/: concurrency-and-backpressure.md  execution-ladder.md  gru-lifecycle-failure-management.md  minions.md  overview.md  pipelines.md  portability.md  project-structure.md  resources.md  runtime-modes.md  startup-forms.md  state-and-persistence.md
docs/guides/: deployment-strategies.md  migrating-to-microservices.md  operating-with-metrics.md  patterns-and-anti-patterns.md  scale-out-strategies.md  testing-minions.md  updating-minions.md
docs/how-to/: integrating-with-cli.md  run-your-first-minion.md  writing-a-custom-resource.md
docs/kitchen-skin/: contributing.md  need-a-nonnative-library.md  writing-minions.md
docs/reference/: cli.md
docs/reference/api/: minions_cli.md  minions_core.md
examples/: all_features_user_minion_draft.py  defer_init_subclass_example.py  minions_hello_world.py  websocket_buffered_pipeline.py  websocket_simple_pipeline.py
examples/conceptual/: crypto_bot.py  my_minion.py  my_pipeline.py  my_resource.py  my_state_store.py  run.py
examples/crypto_bots/: new_tokens_pipeline.py  prices_resource.py  trading_minion.py
examples/deployment/: deploy.py
examples/example1/: binance_api.py  my_minion.py
examples/pipeline_types/: every_minute_pipeline.py
minions/: __main__.py  plan.yml  shell.py
minions/_internal/_cli/: sqlite_tune.py
scripts/: flake_hunter.py  metrics_cardinality_audit.py  metrics_runtime_perf.py  run_cov.py  state_store_sqlite_perf.py
src/minions/: __init__.py  __main__.py  implementations.py  shell.py  types.py
tests/: README.md  conftest.py
tests/assets/: README.md  __init__.py  assets_plan.yaml  file_with_invalid_explicit_minion.py  file_with_invalid_explicit_pipeline.py  file_with_two_minions.py  file_with_two_minions_and_explicit_minion.py  file_with_two_pipelines.py  file_with_unserializable_workflow_context_minion.py  minion_config_simple_1.toml  minion_config_simple_2.toml  minion_config_simple_3.toml  minion_simple.py  minion_simple_resourced_1.py  minion_simple_resourced_2.py  minion_simple_resourced_3.py  minion_simple_resourced_multi.py  pipeline_dict.py  pipeline_simple.py  pipeline_simple_resourced.py  pipeline_simple_single_event_1.py  pipeline_simple_single_event_2.py  pipeline_simple_single_event_3.py  resource_invalid.py  resource_simple_1.py  resource_simple_2.py  resource_simple_3.py
tests/assets_new/: README.md  __init__.py  file_with_invalid_explicit_minion.py  file_with_invalid_explicit_pipeline.py  file_with_two_minions.py  file_with_two_minions_and_explicit_minion.py  file_with_two_pipelines.py  minion_abort_step.py  minion_bad_context.py  minion_bad_event.py  minion_config_a.toml  minion_config_b.toml  minion_fail_step.py  minion_two_steps.py  minion_two_steps_multi_resources.py  minion_two_steps_resource_error.py  minion_two_steps_resourced.py  minion_two_steps_resourced_b.py  minion_two_steps_resourced_c.py  minion_two_steps_resourced_shared_b.py  minion_two_steps_resourced_shared_c.py  minion_uses_config.py  pipeline_emit_1.py  pipeline_emit_1_a.py  pipeline_emit_1_b.py  pipeline_emit_1_c.py  pipeline_emit_error.py  pipeline_emit_n.py  pipeline_emit_n_a.py  pipeline_emit_n_b.py  pipeline_emit_n_c.py  pipeline_resourced.py  pipeline_single_class.py  pipeline_sync_2subs_2events.py  pipeline_sync_3subs_1event.py  resource_fixed_c.py
tests/assets_revamp/: README.md
tests/minions/: test_asset_component_ids.py  test_cli_entrypoints.py
tests/support/: conftest.py  race_window.py  test_run_gru_scenario.py
(+430 files in other folders)
