[project]
name = "minions"
version = "0.0.2"
description = "Async-native orchestration framework — pre-0.1.0 and under active development."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Chris" }
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "aiosqlite>=0.19.0,<1.0",
  "prometheus-client>=0.20.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "sphinx>=7,<8",
  "myst-parser>=3,<4",
  "sphinx-book-theme>=1.1,<2.0",
  "sphinx-autodoc-typehints>=1.25,<2.0",
  "sphinx-copybutton>=0.5.2,<1.0",
  "sphinx-design>=0.5.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/crios1/minions"
Source = "https://github.com/crios1/minions"
Issues = "https://github.com/crios1/minions/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_paths = ["."]
