[project]
name = "minions"
version = "0.0.2"
description = "Progressive execution platform for Python workflow-per-event compute."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Chris" }
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "aiosqlite>=0.19.0,<1.0",
  "msgspec>=0.19.0,<1.0",
  "psutil>=7.0.0,<8.0",
  "prometheus-client>=0.20.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pyright[nodejs]>=1.1,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.6,<1.0",
  "sphinx>=7,<8",
  "myst-parser>=3,<4",
  "sphinx-book-theme>=1.1,<2.0",
  "sphinx-autodoc-typehints>=1.25,<2.0",
  "sphinx-copybutton>=0.5.2,<1.0",
  "sphinx-design>=0.5.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/crios1/minions"
Source = "https://github.com/crios1/minions"
Issues = "https://github.com/crios1/minions/issues"

[project.scripts]
minions = "minions.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["minions*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
# `_mn_*` is Minions' framework-internal namespace, not class-private.
# Runtime validation blocks user code from defining or mutating it.
reportPrivateUsage = "none"

include = [
  "src/minions",
  "tests",
]

# Exclude until GruShell is phased out
exclude = [
  "**/.*",
  "**/node_modules",
  "**/__pycache__",
  "venv",
  ".venv",
  "src/minions/_internal/_domain/gru_shell*.py",
]
